--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,16 @@
             "driver": "SQLite",
             "name": "Eva",
             "database": "${workspaceFolder:intro}/dbs/sqllite/db.db"
+        },
+        {
+            "previewLimit": 50,
+            "server": "aws-0-ap-south-1.pooler.supabase.com",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "name": "Evah ",
+            "database": "postgres",
+            "username": "postgres.qmtomdynrkhdyyyrdpjs",
+            "password": "P4+2ygpUyL+sV7v"
         }
     ],
     "sqltools.useNodeRuntime": true
