--- a/alembic/alembic.ini
+++ b/alembic/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url =postgresql+psycopg://postgres.hligqmxuekndtvcxuxrr:AfQxlUVjojzIjh5g@aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres
+sqlalchemy.url =postgresql+psycopg://postgres.qmtomdynrkhdyyyrdpjs:P4+2ygpUyL+sV7v@aws-0-ap-south-1.pooler.supabase.com:5432/postgres
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
