.env and added tables

--- a/checkers/.env
+++ b/checkers/.env
@@ -4,3 +4,4 @@
     password="P4+2ygpUyL+sV7v "
     port=5432
     database="postgres"
+    DATABASE_URL="postgresql+psycopg://postgres.qmtomdynrkhdyyyrdpjs:P4+2ygpUyL+sV7v@aws-0-ap-south-1.pooler.supabase.com:5432/postgres"
