--- a/checkers/alembic.ini
+++ b/checkers/alembic.ini
@@ -84,7 +84,8 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = driver://user:pass@localhost/dbname
+#sqlalchemy.url = postgresql+psycopg://postgres.qmtomdynrkhdyyyrdpjs:P4+2ygpUyL+sV7v@aws-0-ap-south-1.pooler.supabase.com:5432/postgres
+
 
 
 [post_write_hooks]
